Features pages created and static pages

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,7 @@
   <meta name="twitter:description" content="{{description}}" />
   <meta name="twitter:image" content="{{site.url}}{{favicon}}" />
   <link rel="manifest" href="./manifest.json">
+  <link href="/assets/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/style.css">
   {%- include structuredata.html -%}
   
