--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,24 @@
 <nav>
     <h3 class="nav">
-        <div class="logo">FLASH<span>TRANSFER</span></div>
+        <div class="logo">FILEDROP<span>SHARE</span></div>
         <button id="menuToggle" style="background: none; border: none; color: white; cursor: pointer;">
             ☰
         </button>
     </h3>
+
+    <div id="sideMenu" class="menu">
+        <div class="menu-close" onclick="toggleMenu()">×</div>
+        <ul>
+            <li>
+                <a href="">Link 1</a>
+            </li>
+            <li>
+                <a href="">Link 2</a>
+            </li>
+            <li>
+                <a href="">Link 3</a>
+            </li>
+        </ul>
+    </div>
+
 </nav>
