--- a/_layouts/fileshare.html
+++ b/_layouts/fileshare.html
@@ -3,12 +3,19 @@
 
 {%- include head.html -%}
 
+<style>
+     #dBTN {
+        display: none;
+    }
+</style>
 <body>
     {%- include navbar.html -%}
 
     <div class="file-share-container">
         <h1 class="main-heading">{{pageData.h1}}</h1>
         <h2 class="subtitle">{{pageData.h2}}</h2>
+
+       
         <div class="connection-info">
             <p>YOUR ID:</p>
             <div id="connectionId"></div>
@@ -25,7 +32,10 @@
                 <progress id="progress" max="100" value="0"></progress>
                 <div id="transferStatus"></div>
             </div>
+            <button id="dBTN">download file in reciver</button>
+
         </div>
+
         <div id="receivedFilesContainer">
             <h3></h3>
             <ul id="receivedFiles"></ul>
@@ -46,7 +56,7 @@
             <a id="shareLink" href="#">Click to copy link</a>
         </div>
     </div>
-
+   
     <div class="container-fluid" style="background: black;">
         <div class="container">
             {%- include how-to.html -%}
