--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,6 +38,7 @@
   <link rel="manifest" href="./manifest.json">
   <link href="/assets/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="shortcut icon" href="/assets/logo/plain favcion filedropshare1.svg" type="image/x-icon">
   {%- include structuredata.html -%}
   
   <script>
