--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav>
     <h3 class="nav">
-        <div class="logo">FILEDROP<span>SHARE</span></div>
+        <div class="logo">FILE<span>DROP</span><span>SHARE</span></div>
         <button id="menuToggle" style="background: none; border: none; color: white; cursor: pointer;">
             ☰
         </button>
