--- a/_layouts/fileshare.html
+++ b/_layouts/fileshare.html
@@ -16,7 +16,7 @@
         <h2 class="subtitle">{{pageData.h2}}</h2>
 
        
-        <div class="connection-info">
+        <div class="connection-info" style="display: none;">
             <p>YOUR ID:</p>
             <div id="connectionId"></div>
         </div>
@@ -70,7 +70,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.4.7/peerjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="/assets/js/nav.js"></script>
-    <script src="/assets/js/fileShare.js"></script>
+    <script src="/assets/js/fileShare1.js"></script>
     <script src="/assets/js/modal.js"></script>
 </body>
 
