--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav>
     <h3 class="nav">
         <div class="logo">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg version="1.1" id="Layer_1" height="30px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 614.4 98.7" style="enable-background:new 0 0 614.4 98.7;" xml:space="preserve">
             <style type="text/css">
                 .st0{fill:url(#SVGID_1_);}
@@ -93,8 +93,7 @@
                     <path class="st7" d="M582.2,16.9h28.2v9.4h-18.3v18.3h14.5v9.4h-14.5v19.2h18.3v9.4h-28.2V16.9z"/>
                 </g>
             </g>
-            </svg>
-             FILE<span>DROP</span><span>SHARE</span></div>
+            </svg></div>
         <button id="menuToggle" style="background: none; border: none; color: white; cursor: pointer;">
             ☰
         </button>
