--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,99 +1,34 @@
 <nav>
     <h3 class="nav">
         <div class="logo">
-            <svg version="1.1" id="Layer_1" height="30px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 viewBox="0 0 614.4 98.7" style="enable-background:new 0 0 614.4 98.7;" xml:space="preserve">
-            <style type="text/css">
-                .st0{fill:url(#SVGID_1_);}
-                .st1{fill:url(#SVGID_2_);}
-                .st2{fill:#FFFFFF;}
-                .st3{fill:url(#SVGID_3_);}
-                .st4{fill:url(#SVGID_4_);}
-                .st5{fill:url(#SVGID_5_);}
-                .st6{fill:url(#SVGID_6_);}
-                .st7{fill:#DBFF4B;}
-            </style>
-            <g>
-                <g>
-                    <g>
-                        
-                            <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="29.912" y1="34.421" x2="92.224" y2="34.421" gradientTransform="matrix(1 0 0 -1 0 98)">
-                            <stop  offset="0" style="stop-color:#FFFFFF"/>
-                            <stop  offset="1" style="stop-color:#DBFF4B"/>
-                        </linearGradient>
-                        <path class="st0" d="M92.2,32.4v62.3H70.4V61.2c-11,7.1-18.2,19.5-18.2,33.5H29.9c0-26.7,16.9-49.5,40.5-58.4
-                            C77.2,33.8,84.6,32.4,92.2,32.4z"/>
-                    </g>
-                    <g>
-                        
-                            <linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="3.952" y1="47.395" x2="92.224" y2="47.395" gradientTransform="matrix(1 0 0 -1 0 98)">
-                            <stop  offset="0" style="stop-color:#FFFFFF"/>
-                            <stop  offset="1" style="stop-color:#DBFF4B"/>
-                        </linearGradient>
-                        <path class="st1" d="M92.2,6.5v22.3c-7.6,0-14.9,1.3-21.7,3.7c-0.1,0-0.1,0-0.2,0.1c-25.7,9-44.2,33.5-44.2,62.3H4
-                            c0-26.2,11.5-49.8,29.7-66H4.9V6.5H92.2z"/>
-                    </g>
-                </g>
-                <g>
-                    <path class="st2" d="M122.3,17.9H150v9.4h-17.8v19.2h14.1v9.4h-14.1v27.7h-9.9L122.3,17.9L122.3,17.9z"/>
-                    <path class="st2" d="M157.7,17.9h9.9v65.6h-9.9V17.9z"/>
-                    <path class="st2" d="M178.5,17.9h9.9v56.2h17.7v9.4h-27.7V17.9z"/>
-                    <path class="st2" d="M213.9,17.9h28.2v9.4h-18.3v18.3h14.5v9.4h-14.5v19.2h18.3v9.4h-28.2V17.9z"/>
-                </g>
-                <g>
-                    <g>
-                        
-                            <linearGradient id="SVGID_3_" gradientUnits="userSpaceOnUse" x1="272.575" y1="80.206" x2="272.575" y2="14.585" gradientTransform="matrix(1 0 0 -1 0 98)">
-                            <stop  offset="0" style="stop-color:#FFFFFF"/>
-                            <stop  offset="1" style="stop-color:#DBFF4B"/>
-                        </linearGradient>
-                        <path class="st3" d="M257,17.8h15.6c4.7,0,8.5,1.4,11.3,4.3c2.8,2.8,4.2,6.6,4.2,11.4v34.3c0,4.8-1.4,8.5-4.2,11.4
-                            c-2.8,2.8-6.6,4.3-11.3,4.3H257V17.8z M272.1,74c1.9,0,3.4-0.5,4.5-1.6c1.1-1.1,1.6-2.6,1.6-4.5V33.3c0-1.9-0.5-3.4-1.6-4.5
-                            c-1.1-1.1-2.6-1.6-4.5-1.6H267V74L272.1,74L272.1,74z"/>
-                        
-                            <linearGradient id="SVGID_4_" gradientUnits="userSpaceOnUse" x1="314.3845" y1="80.206" x2="314.3845" y2="14.584" gradientTransform="matrix(1 0 0 -1 0 98)">
-                            <stop  offset="0" style="stop-color:#FFFFFF"/>
-                            <stop  offset="1" style="stop-color:#DBFF4B"/>
-                        </linearGradient>
-                        <path class="st4" d="M320.4,83.4l-7.2-27.1H308v27.1h-9.9V17.8h15.6c4.7,0,8.5,1.4,11.3,4.3c2.8,2.8,4.2,6.6,4.2,11.4v7.2
-                            c0,3-0.6,5.7-1.8,8c-1.2,2.3-2.9,4.1-5.1,5.4l8.3,29.3L320.4,83.4L320.4,83.4z M308,46.9h5.2c1.9,0,3.4-0.5,4.5-1.6
-                            c1.1-1.1,1.6-2.6,1.6-4.5v-7.6c0-1.9-0.5-3.4-1.6-4.5c-1.1-1.1-2.6-1.6-4.5-1.6H308V46.9z"/>
-                        
-                            <linearGradient id="SVGID_5_" gradientUnits="userSpaceOnUse" x1="353.946" y1="81.143" x2="353.946" y2="13.647" gradientTransform="matrix(1 0 0 -1 0 98)">
-                            <stop  offset="0" style="stop-color:#FFFFFF"/>
-                            <stop  offset="1" style="stop-color:#DBFF4B"/>
-                        </linearGradient>
-                        <path class="st5" d="M342.4,80c-2.9-2.9-4.4-6.7-4.4-11.5V32.7c0-4.7,1.5-8.6,4.4-11.5c2.9-2.9,6.8-4.4,11.5-4.4
-                            s8.6,1.5,11.5,4.4c2.9,2.9,4.4,6.7,4.4,11.5v35.8c0,4.8-1.5,8.6-4.4,11.5c-2.9,2.9-6.8,4.4-11.5,4.4S345.4,82.9,342.4,80z
-                             M358.4,73.3c1.1-1.1,1.6-2.7,1.6-4.8V32.7c0-2.1-0.5-3.7-1.6-4.8c-1.1-1.1-2.5-1.7-4.4-1.7c-1.9,0-3.3,0.6-4.4,1.7
-                            c-1.1,1.1-1.6,2.7-1.6,4.8v35.8c0,2.1,0.5,3.7,1.6,4.8c1.1,1.1,2.5,1.7,4.4,1.7C355.8,75,357.3,74.4,358.4,73.3z"/>
-                        
-                            <linearGradient id="SVGID_6_" gradientUnits="userSpaceOnUse" x1="395.474" y1="80.206" x2="395.474" y2="14.586" gradientTransform="matrix(1 0 0 -1 0 98)">
-                            <stop  offset="0" style="stop-color:#FFFFFF"/>
-                            <stop  offset="1" style="stop-color:#DBFF4B"/>
-                        </linearGradient>
-                        <path class="st6" d="M379.9,17.8h15.6c4.7,0,8.5,1.4,11.3,4.3c2.8,2.8,4.2,6.6,4.2,11.4v7.7c0,4.8-1.4,8.5-4.2,11.4
-                            c-2.8,2.8-6.6,4.3-11.3,4.3h-5.6v26.6h-9.9L379.9,17.8L379.9,17.8z M395,47.4c1.9,0,3.4-0.5,4.5-1.6c1.1-1.1,1.6-2.6,1.6-4.5
-                            v-8.1c0-1.9-0.5-3.4-1.6-4.5c-1.1-1.1-2.6-1.6-4.5-1.6h-5.2v20.2L395,47.4L395,47.4z"/>
-                    </g>
-                </g>
-                <g>
-                    <path class="st7" d="M426.5,81.4c-2.4-1.4-4.3-3.3-5.7-5.7c-1.3-2.4-2-5.2-2-8.3v-2.3l9.6-1v2.4c0,2.4,0.6,4.3,1.7,5.6
-                        c1.1,1.4,2.7,2.1,4.7,2.1c1.9,0,3.5-0.6,4.6-1.7c1.2-1.1,1.7-2.7,1.7-4.6c0-2.1-0.6-4.2-1.8-6.1c-1.2-1.9-3.6-4.6-7.3-8.1
-                        c-4.9-4.6-8.2-8.5-10-11.5c-1.8-3.1-2.7-6.4-2.7-10c0-4.9,1.3-8.9,4-11.8c2.7-2.9,6.4-4.4,11.1-4.4c4.7,0,8.4,1.5,11.1,4.4
-                        c2.7,2.9,4,6.9,4,11.8v1.7l-9.6,1V33c0-2.5-0.5-4.4-1.4-5.7c-0.9-1.3-2.3-2-4-2c-1.7,0-3.1,0.5-4,1.6c-0.9,1.1-1.4,2.6-1.4,4.7
-                        s0.6,4,1.9,6c1.2,1.9,3.7,4.6,7.2,8.2c4.9,4.9,8.2,8.8,10,11.8c1.8,3,2.7,6.2,2.7,9.8c0,3.1-0.7,5.9-2,8.3
-                        c-1.3,2.4-3.2,4.3-5.7,5.7c-2.4,1.4-5.2,2.1-8.3,2.1C431.7,83.4,428.9,82.7,426.5,81.4z"/>
-                    <path class="st7" d="M459.3,82.5V16.9h9.9v27.7H481V16.9h9.9v65.6H481V53.9h-11.8v28.6H459.3z"/>
-                    <path class="st7" d="M521.4,67.9h-10.7l-2.2,14.5h-9.9l10.9-65.6h13.3l10.9,65.6h-10.1L521.4,67.9z M520.1,58.4l-4-27.5l-4,27.5
-                        H520.1z"/>
-                    <path class="st7" d="M563.7,82.5l-7.2-27.1h-5.2v27.1h-9.9V16.9H557c4.7,0,8.5,1.4,11.3,4.3c2.8,2.8,4.2,6.6,4.2,11.4v7.2
-                        c0,3-0.6,5.7-1.8,8c-1.2,2.3-2.9,4.1-5.1,5.4l8.3,29.3H563.7z M551.3,46h5.2c1.9,0,3.4-0.5,4.5-1.6c1.1-1.1,1.6-2.6,1.6-4.5v-7.6
-                        c0-1.9-0.5-3.4-1.6-4.5c-1.1-1.1-2.6-1.6-4.5-1.6h-5.2V46z"/>
-                    <path class="st7" d="M582.2,16.9h28.2v9.4h-18.3v18.3h14.5v9.4h-14.5v19.2h18.3v9.4h-28.2V16.9z"/>
-                </g>
-            </g>
-            </svg></div>
+            <svg height="30px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:url(#SVGID_1_);}
+	.st1{fill:url(#SVGID_2_);}
+</style>
+<g>
+	<g>
+		
+			<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="15.16" y1="18.435" x2="47.98" y2="18.435" gradientTransform="matrix(1 0 0 -1 0 50)">
+			<stop  offset="0" style="stop-color:#FFFFFF"/>
+			<stop  offset="1" style="stop-color:#D9E149"/>
+		</linearGradient>
+		<path class="st0" d="M48,15.1V48H36.5V30.3c-5.8,3.8-9.6,10.3-9.6,17.7H15.2c0-14.1,8.9-26.1,21.3-30.7
+			C40.1,15.9,43.9,15.1,48,15.1z"/>
+	</g>
+	<g>
+		
+			<linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="1.48" y1="25.265" x2="47.98" y2="25.265" gradientTransform="matrix(1 0 0 -1 0 50)">
+			<stop  offset="0" style="stop-color:#FFFFFF"/>
+			<stop  offset="1" style="stop-color:#D9E149"/>
+		</linearGradient>
+		<path class="st1" d="M48,1.5v11.7c-4,0-7.8,0.7-11.4,1.9c0,0-0.1,0-0.1,0C23,19.9,13.2,32.8,13.2,48H1.5
+			c0-13.8,6.1-26.2,15.6-34.8H2V1.5H48z"/>
+	</g>
+</g>
+</svg>
+             FILE<span>DROP</span><span>SHARE</span></div>
         <button id="menuToggle" style="background: none; border: none; color: white; cursor: pointer;">
             ☰
         </button>
