--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: "Poppins", serif;
-  background: black;
+  background: rgb(255, 255, 255);
   min-height: 100vh;
   color: white;
 }
@@ -667,7 +667,6 @@ footer {
 #dBTN {
   margin: auto;
   display: none;
-
   align-items: center;
   background: #dbff4b;
   border-radius: 100px;
@@ -682,9 +681,84 @@ footer {
   overflow-y: scroll; /* Keep scroll functionality */
   min-height: 0px;
   max-height: 170px;
-  scrollbar-width: none; 
+  scrollbar-width: none; /* For Firefox */
 }
 
 #fileInfo::-webkit-scrollbar {
   display: none; /* For Chrome, Safari, and Opera */
+}
+
+/* white */
+.nav {
+  filter: invert(1) brightness(0.1);
+}
+.main-heading {
+  color: black;
+}
+.add-file-button {
+  color: white !important;
+  background-color: black;
+}
+
+.file-share-container::before {
+  content: "";
+  position: fixed;
+  bottom: -50%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 200vw;
+  height: 100vh;
+  background: radial-gradient(
+    ellipse at center,
+    #e7ff88 32%,
+    #d4ff29 39%,
+    #ffffff 63%
+  );
+  pointer-events: none;
+  z-index: -1;
+  max-width: 100vw;
+  filter: blur(29px);
+  opacity: 1;
+  transition: max-width 0.3s ease-out, opacity 0.3s ease-out;
+}
+
+.add-file-button {
+  box-shadow: 1px 24px 285px 10px #dbff4c;
+}
+.connectButton {
+  background: black;
+  color: white;
+}
+
+.container-fluid {
+  background: rgba(255, 255, 255, 0.096) !important;
+  color: black;
+}
+.faq_wrapper {
+  color: black;
+}
+.faq_wrapper p {
+  font-weight: 600;
+}
+.howto-steps:nth-of-type(2) {
+  scale: 1.2;
+  box-shadow: 0px 2px 5px 1px #00000014;
+}
+.bottom-footer {
+  display: none;
+}
+
+.file-share-container::before {
+  max-width: var(--max-width, 100vw);
+  opacity: var(--opacity, 1);
+}
+.menu {
+  background: white;
+  box-shadow: -3px 0 13px 1px rgb(0 0 0 / 4%);
+}
+.menu a {
+  color: black;
+}
+.menu-close{
+  color: black;
 }
