--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -762,3 +762,7 @@ footer {
 .menu-close{
   color: black;
 }
+.connectButton:hover {
+  box-shadow: rgba(82, 82, 82, 0.075) 1px 2px 5px;
+  background: rgb(0, 0, 0);
+}
