--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,10 @@
           <div class="col-md-3">
             <div class="footer-logo">
               <a class="navbar-brand" href="/">
-                <img width="150px" src="{{footerData.logo}}" alt="Webzify">
+                <img width="150px" src="/assets/logo/file drop share logo.svg" alt="filedroptransfer">
               </a>
             </div>
-            <p class="text-white my-4">{{footerData.description}}</p>
+            <p class="my-4">{{footerData.description}}</p>
             <div class="d-flex social-links mb-4 gap-2">
               {%- for link in footerData.social -%}
               <a target="_blank" class="share-btn {{link.title}}-link" href="{{link.url}}">
