--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,7 @@ progress::-webkit-progress-value {
   margin-bottom: 20px;
   text-align: center;
   font-weight: 600;
+  font-size: 23px;
 }
 
 .connection-input {
@@ -198,7 +199,7 @@ progress::-webkit-progress-value {
 
 #peerIdInput {
   flex: 1;
-  padding: 18px;
+  padding: 13px;
   border: 1px solid #444;
   border-radius: 17px;
   font-size: 1.08rem;
@@ -749,8 +750,14 @@ footer {
 .faq_wrapper {
   color: black;
 }
-.faq_wrapper p {
+.faq_wrapper p:first-child {
   font-weight: 600;
+  font-size: 1.3rem;
+}
+
+.faq_wrapper p:nth-child(2){
+  font-size: 16px !important;
+  color: red;
 }
 
 .file-share-container::before {
@@ -791,4 +798,18 @@ footer{
 }
 .step-number{
   font-size: 3rem;
+}
+.scroll-top {
+  position: fixed;
+  bottom: 15px;
+  z-index: 99;
+  right: 50px;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background: var(--primary-color);
+  border-radius: 50px;
 }
